--- a/package.json
+++ b/package.json
@@ -4,17 +4,37 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "https": "vue-cli-service serve --https",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@rightbraintechbd/vue-awesome-icon-picker": "^1.1.0",
+    "animated-number-vue": "^1.0.0",
+    "boxicons": "^2.0.7",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.2",
+    "moment": "^2.29.1",
+    "moment-with-locales-es6": "^1.0.1",
+    "nice-color-palettes": "^3.0.0",
     "register-service-worker": "^1.7.1",
+    "uniqid": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-ctk-date-time-picker": "^2.5.0",
+    "vue-icon-picker": "^1.0.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-slide-options": "^1.0.1",
+    "vue-swatches": "^2.1.0",
+    "vue-swipe-actions": "^2.0.0-beta.20",
+    "vuejs-dialog": "^1.4.2",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,7 +49,9 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
