--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@rightbraintechbd/vue-awesome-icon-picker": "^1.1.0",
+    "@types/lodash-es": "^4.17.4",
     "animated-number-vue": "^1.0.0",
     "boxicons": "^2.0.7",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
+    "hexsorter": "^1.5.0",
+    "lodash-es": "^4.17.20",
     "moment": "^2.29.1",
     "moment-with-locales-es6": "^1.0.1",
     "nice-color-palettes": "^3.0.0",
@@ -31,6 +35,7 @@
     "vue-slide-options": "^1.0.1",
     "vue-swatches": "^2.1.0",
     "vue-swipe-actions": "^2.0.0-beta.20",
+    "vue-virtual-scroll-list": "^2.3.2",
     "vuejs-dialog": "^1.4.2",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.4.0",
