--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "register-service-worker": "^1.7.1",
     "uniqid": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-animejs": "^2.1.1",
     "vue-ctk-date-time-picker": "^2.5.0",
     "vue-icon-picker": "^1.0.0",
     "vue-router": "^3.2.0",
