--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue": "^2.6.11",
     "vue-animejs": "^2.1.1",
     "vue-ctk-date-time-picker": "^2.5.0",
+    "vue-feather-icons": "^5.1.0",
     "vue-icon-picker": "^1.0.0",
     "vue-router": "^3.2.0",
     "vue-slide-options": "^1.0.1",
