--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@mathieustan/vue-datepicker": "^0.2.11",
     "@rightbraintechbd/vue-awesome-icon-picker": "^1.1.0",
     "@types/lodash-es": "^4.17.4",
     "animated-number-vue": "^1.0.0",
