--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/lodash-es": "^4.17.4",
     "animated-number-vue": "^1.0.0",
     "boxicons": "^2.0.7",
+    "cleave.js": "^1.6.0",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
     "hexsorter": "^1.5.0",
@@ -57,7 +58,7 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
